@@ -32,6 +32,8 @@ PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)
 
 BUG FIXES
 
+PIG-4618: When use tez as the engine , set pig.user.cache.enabled=true do not take effect (wisgood via rohini)
+
 PIG-4533: Document error: Pig does support concatenated gz file (xhudik via daijy)
 
 PIG-4578: ToDateISO should support optional ' ' space variant used by JDBC (michaelthoward via daijy)
